--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   permission_handler: ^12.0.0+1
   google_sign_in: ^6.3.0
   flutter_gif: ^0.0.4
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
