--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,13 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-build/
+
 develop-eggs/
 dist/
 downloads/
 eggs/
 .eggs/
-
+build/
 lib64/
 parts/
 sdist/
@@ -160,6 +160,6 @@ cython_debug/
 #.idea/
 .vercel
 
-firebase/crisis-survivor-firebase-adminsdk-fbsvc-c58f35a6ed.json
+firebase/
 android/app/release.keystore
 android/key.properties
