--- a/.gitignore
+++ b/.gitignore
@@ -160,6 +160,6 @@ cython_debug/
 #.idea/
 .vercel
 
-firebase/
-android/app/release.keystore
-android/key.properties
+# firebase/
+# android/app/release.keystore
+# android/key.properties
