New Logic Pushed!

--- a/auth_backend/Dockerfile
+++ b/auth_backend/Dockerfile
@@ -5,9 +5,10 @@ ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app
 
-# Copy and install
 COPY . /app
+
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# Run migrations and then start the server
+CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
