--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_sign_in: ^6.3.0
   flutter_gif: ^0.0.4
   http: ^1.4.0
+  flutter_stripe: ^11.5.0
 
 dev_dependencies:
   flutter_test:
