--- a/auth_backend/requirements.txt
+++ b/auth_backend/requirements.txt
@@ -1,14 +1,18 @@
 anyio==4.9.0
+APScheduler==3.11.0
 asgiref==3.8.1
 CacheControl==0.14.3
 cachetools==5.5.2
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
+coincurve==21.0.0
 cryptography==45.0.3
 Django==5.2.2
 django-cors-headers==4.7.0
+django-crontab==0.7.1
 djangorestframework==3.16.0
+eciespy==0.4.5
 firebase-admin==6.9.0
 google-api-core==2.25.0
 google-api-python-client==2.171.0
@@ -37,6 +41,7 @@ protobuf==6.31.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
+pycryptodome==3.23.0
 PyJWT==2.10.1
 pyparsing==3.2.3
 python-dotenv==1.1.0
@@ -48,8 +53,10 @@ sniffio==1.3.1
 sqlparse==0.5.3
 typing_extensions==4.14.0
 tzdata==2025.2
+tzlocal==5.3.1
 upstash-redis==1.4.0
 uritemplate==4.2.0
 urllib3==2.4.0
 waitress==3.0.2
 whitenoise==6.9.0
+django-extensions
