--- a/auth_backend/Dockerfile
+++ b/auth_backend/Dockerfile
@@ -11,4 +11,4 @@ RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 # Run migrations and then start the server
-CMD ["sh", "-c", "python manage.py collectstatic && python manage.py makemigrations && python manage.py migrate && python run_waitress.py && python manage.py runscript rotate_key && python railway.py"]
+CMD ["sh", "-c", "python manage.py makemigrations && python manage.py migrate && python run_waitress.py && python manage.py runscript rotate_key"]
