--- a/auth_backend/requirements.txt
+++ b/auth_backend/requirements.txt
@@ -1,6 +1,7 @@
 anyio==4.9.0
 APScheduler==3.11.0
 asgiref==3.8.1
+async-timeout==5.0.1
 CacheControl==0.14.3
 cachetools==5.5.2
 certifi==2025.4.26
@@ -8,9 +9,11 @@ cffi==1.17.1
 charset-normalizer==3.4.2
 coincurve==21.0.0
 cryptography==45.0.3
+Deprecated==1.2.18
 Django==5.2.2
 django-cors-headers==4.7.0
 django-crontab==0.7.1
+django-extensions==4.1
 djangorestframework==3.16.0
 eciespy==0.4.5
 firebase-admin==6.9.0
@@ -26,6 +29,7 @@ google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
 grpcio==1.73.0
 grpcio-status==1.73.0
+gunicorn==23.0.0
 h11==0.16.0
 h2==4.2.0
 hpack==4.1.0
@@ -45,8 +49,9 @@ pycryptodome==3.23.0
 PyJWT==2.10.1
 pyparsing==3.2.3
 python-dotenv==1.1.0
-redis==6.2.0
+redis==4.3.4
 redis-cli==1.0.1
+redis-client==1.0.1
 requests==2.32.4
 rsa==4.9.1
 sniffio==1.3.1
@@ -59,6 +64,4 @@ uritemplate==4.2.0
 urllib3==2.4.0
 waitress==3.0.2
 whitenoise==6.9.0
-django-extensions
-requests
-pip <= 25.2
+wrapt==1.17.2
