--- a/auth_backend/Dockerfile
+++ b/auth_backend/Dockerfile
@@ -12,4 +12,4 @@ RUN pip install -r requirements.txt
 RUN find /app -type f
 
 # Run migrations and then start the server
-CMD ["sh", "-c", "python rotate.py && python manage.py makemigrations && python manage.py migrate && python run_waitress.py "]
+CMD ["sh", "-c", "python run_waitress.py && python manage.py makemigrations && python manage.py migrate"]
