--- a/auth_backend/Dockerfile
+++ b/auth_backend/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY . /app
 
 RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+RUN pip install -r requirements.txt 
 
 # Run migrations and then start the server
-CMD ["sh", "-c", "python run_waitress.py && python manage.py makemigrations && python manage.py migrate"]
+CMD ["sh", "-c", "python manage.py migrate && python run_waitress.py"]
