--- a/auth_backend/Dockerfile
+++ b/auth_backend/Dockerfile
@@ -1,3 +1,17 @@
+# FROM python:3.11-slim
+
+# ENV PYTHONDONTWRITEBYTECODE 1
+# ENV PYTHONUNBUFFERED 1
+
+# WORKDIR /app
+
+# COPY . /app
+
+# RUN pip install --upgrade pip
+# RUN pip install -r requirements.txt 
+
+# # Run migrations and then start the server
+# CMD ["sh", "-c", "python manage.py migrate && python run_waitress.py"]
 FROM python:3.11-slim
 
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -5,10 +19,15 @@ ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app
 
+# Install dependencies early (cached unless requirements.txt changes)
+COPY requirements.txt /app/
+RUN pip install --upgrade pip && pip install -r requirements.txt
+
+# Copy the rest of the app
 COPY . /app
 
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt 
+# Add entrypoint
+COPY entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
 
-# Run migrations and then start the server
-CMD ["sh", "-c", "python manage.py migrate && python run_waitress.py"]
+CMD ["/app/entrypoint.sh"]
