--- a/auth_backend/Dockerfile
+++ b/auth_backend/Dockerfile
@@ -29,6 +29,6 @@ COPY . /app
 # Add entrypoint
 # COPY entrypoint.sh /app/entrypoint.sh
 # RUN chmod +x /app/entrypoint.sh
-RUN python manage.py migrate
-RUN python run_waitress.py
-# CMD ["/app/entrypoint.sh"]
+# RUN python manage.py migrate
+# RUN python run_waitress.py
+CMD ["python run_waitress.py"]
