--- a/auth_backend/Dockerfile
+++ b/auth_backend/Dockerfile
@@ -27,9 +27,9 @@ RUN pip install --upgrade pip && pip install -r requirements.txt
 COPY . /app
 
 # Add entrypoint
-# COPY entrypoint.sh /app/entrypoint.sh
-# RUN chmod +x entrypoint.sh
+COPY entrypoint.sh /app/entrypoint.sh
+RUN chmod +x entrypoint.sh
 # RUN python manage.py migrate
 # RUN python run_waitress.py
-# RUN /app/entrypoint.sh
-CMD ["python", "run_waitress.py"]
+RUN /app/entrypoint.sh
+# CMD ["python", "run_waitress.py"]
