--- a/auth_backend/Dockerfile.ignore
+++ b/auth_backend/Dockerfile.ignore
@@ -126,4 +126,4 @@ ENV LOGGLY_TOKEN=Rk3Ivo4u7Ya75xwsvJCMApXiinamr6O8LdTFZX7QKq32M5xt1znq_Yft7Cwm327
 # RUN chmod +x entrypoint.sh
 
 # ENTRYPOINT ["/app/entrypoint.sh"]
-CMD ["python","manage.py","migrate","python", "manage.py", "startserver"]
+CMD ["python","manage.py","migrate","&&","python", "manage.py", "startserver"]
