--- a/auth_backend/nixpacks.toml
+++ b/auth_backend/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ['python312', 'openssl']
+nixPkgs = ['python311','python311Packages.pip','openssl']
 
 [phases.install]
 cmds = [
