--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   file_picker: ^10.2.0
   url_launcher: ^6.3.1
   path_provider: ^2.1.5
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
